2007-10-11  Al Riddoch  <alriddoch@zepler.org>

	* Eris/Calendar.cpp: Check calendar property more carefully.

2007-10-11  Al Riddoch  <alriddoch@zepler.org>

	* Eris/Calendar.h: Make private members protected for testing.

2007-10-10  Al Riddoch  <alriddoch@zepler.org>

	* Eris/Calendar.cpp: Add an assert to ensure the avatar has a view.

2007-10-10  Al Riddoch  <alriddoch@zepler.org>

	* test/Avatar_unittest.cpp: Don't create a new view explicitly for
	  each avatar, it is done in the constructor.

2007-10-10  Al Riddoch  <alriddoch@zepler.org>

	* Eris/Calendar.cpp, Eris/Calendar.h: Fix up formatting and whitespace
	  use.

	* test/Calendar_unittest.cpp: Start work on Calendar unit test.

2007-10-10  Al Riddoch  <alriddoch@zepler.org>

	* test/Avatar_unittest.cpp: Cover the rest of Avatar. Coverage is now
	  pretty much complete.

2007-10-10  Al Riddoch  <alriddoch@zepler.org>

	* Eris/Avatar.cpp: Toughen up operation checking in logoutResponse().

2007-10-09  Al Riddoch  <alriddoch@zepler.org>

	* test/Avatar_unittest.cpp: Cover moveInDirection(),
	  place(), wield(), useOn(), attack() and useStop().

2007-10-09  Al Riddoch  <alriddoch@zepler.org>

	* test/agent.cpp, test/commander.cpp, test/controller.cpp,
	  test/tests.cpp: Re-order headers for OSX.

2007-10-09  Al Riddoch  <alriddoch@zepler.org>

	* test/clientConnection.cpp, test/stubServer.cpp: Re-order headers
	  for OSX.

2007-10-08  Al Riddoch  <alriddoch@zepler.org>

	* test/Avatar_unittest.cpp: Cover drop(), take(), touch(), say(),
	  moveToPoint(), moveInDirection().

2007-10-08  Al Riddoch  <alriddoch@zepler.org>

	* Eris/Entity.h: Make all private members protected for testing.

2007-10-07  Al Riddoch  <alriddoch@zepler.org>

        * test/stubServer.cpp: Provide more verbose details about why the
	  child process died.

2007-10-06  Al Riddoch  <alriddoch@zepler.org>

        * test/Avatar_unittest.cpp: Cover destructor and deactivate().

2007-10-06  Al Riddoch  <alriddoch@zepler.org>
